add about us page

--- a/pages/AboutUs/index.html
+++ b/pages/AboutUs/index.html
@@ -15,6 +15,11 @@
       <li><a href="../ContactUs/index.html">Contact us</a></li>
     </ul>
     <h1>Về chúng tôi</h1>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut unde
+      repudiandae aliquam voluptatem aspernatur perferendis molestiae asperiores
+      iure minima quibusdam?
+    </p>
     <script src="./index.js"></script>
   </body>
 </html>
