update about us page

--- a/pages/AboutUs/index.html
+++ b/pages/AboutUs/index.html
@@ -20,6 +20,10 @@
       repudiandae aliquam voluptatem aspernatur perferendis molestiae asperiores
       iure minima quibusdam?
     </p>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda,
+      perferendis voluptates quam voluptas nulla corrupti?
+    </p>
     <script src="./index.js"></script>
   </body>
 </html>
